aside gap fixed

--- a/src/style.css
+++ b/src/style.css
@@ -606,7 +606,7 @@ section.minmaxtemp>p {
     height: 100%;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 3rem;
 }
 
 #aside--five-day-single-interval-panel {
@@ -806,7 +806,6 @@ sup {
     }
 
     #aside--weather-panel-wrapper>#aside--five-days {
-        margin-top: 3rem;
         gap: 3rem;
     }
 
